--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -58,8 +58,8 @@
     overflow-x: auto;
     scrollbar-width: none;
     /* Optional: For smoother scrolling and snap effect */
-    /* scroll-snap-type: x mandatory;  */
-    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory; 
+    /* scroll-behavior: smooth; */
 }
 
   .slider-wrapper .image-list::-webkit-scrollbar {
