--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -82,6 +82,14 @@
     /* font-size: var(--fs-btn); */
 }
 
+.checkbox-container span {
+    color: var(--clr-accent);
+}
+
+.checkbox-container span:hover {
+    text-decoration: underline;
+}
+
 .label {
     display: flex;
     align-items: end;
@@ -222,6 +230,7 @@
 }
 
 .option:hover {
+    border-radius: 0;
     background-color: #f2f2f2;
     width: 100%; /* Ensure hover effect takes full width */
 }
