--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -37,7 +37,7 @@
     background-color: inherit;
     border: 1px solid var(--clr-body2);
     justify-content: center;
-
+    font-size: var(--fs-btn);
     transform: scale(0.85);
     margin-left:-6px;
     cursor: pointer;
