--- a/assets/css/landlord.css
+++ b/assets/css/landlord.css
@@ -88,7 +88,7 @@
 
 /* LETTING SECTION */
 
-.lettings__container {
+.lettings__container, .market__container {
     display: flex;
     flex-direction: row;
     /* flex-wrap: wrap; */
@@ -96,7 +96,8 @@
     column-gap: 6.4rem;
 }
 
-.lettings__container > * {
+.lettings__container > *,
+.market__container > * {
     flex-basis: 50%;
 }
 
@@ -106,7 +107,14 @@
     justify-content: flex-end;
 }
 
-.lettings__container img {
+.market__container .image__container {
+    display: flex;
+    /* justify-content: flex-end; */
+    justify-content: flex-start;
+}
+
+.lettings__container img,
+.market__container img {
     max-width: 514px;
     width: 100%;
     height: auto;
