--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -120,7 +120,7 @@
 
 @media (max-width: 1200px) {
 
-    .section__prep::after {
+    .section__prep::after,.section__services::after  {
         content: '';
         
         background-color: #fff; 
