--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -28,6 +28,8 @@
     /*PRIMARY*/
   --clr-accent: #CB3939;
   --clr-accent2: #093394;
+  /* --clr-accent: #36e961;
+  --clr-accent2: #11506e; */
   --clr-body: #35312A;
   --clr-headings: #060506;
   
