Doing the footer links and tweaking nav font size 28/03/2024

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -51,6 +51,7 @@
 
 .navbar-collapse {
     justify-content: center; /* Center flex items horizontally in the container */
+    font-size: var(--fs-h3);
 }
 
 .navbar-nav {
