--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -46,6 +46,9 @@
   --fs-body: 1.75rem;
   --fs-btn: 1.5rem;
 
+  --spacing-mb: 4.8rem;
+  --max-width: 80%;
+
   /*Box shadow*/
   --bs-1: 0px 4px 16px rgba(0, 0, 0, 0.2);
   --bs-2: 0px 8px 24px rgba(0, 0, 0, 0.15);
