--- a/assets/css/property.css
+++ b/assets/css/property.css
@@ -31,7 +31,8 @@
         margin-bottom: var(--spacing-mb);
         margin-right: auto;
         width: 100%;
-        
+        flex-wrap: wrap;
+        row-gap: 3.2rem;
 
 }
 
@@ -103,6 +104,7 @@
     overflow: hidden;
     /* Ensure a fixed height is set to contain the image. Adjust this height as necessary. */
     height: 303px; /* Example fixed height */
+    width: 560px;
 }
 
 .project__img {
@@ -110,7 +112,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: transform 600ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
+    transition: transform 400ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
 }
 
 .project__img:hover,
