--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,8 @@
 /* SECTION HERO */
+body {
+    overflow-x: hidden;
+}
+
 .section__hero {
     background-image: url('../images/pages/about/hero.png'); /* Path to your image */
     background-size: cover; /* Cover the entire section without stretching */
