--- a/assets/css/property.css
+++ b/assets/css/property.css
@@ -1,4 +1,8 @@
 /* SECTION HERO */
+body {
+    overflow-x: hidden;
+}
+
 .section__hero {
     background-image: url('../images/pages/property-deals/hero.png'); /* Path to your image */
     background-size: cover; /* Cover the entire section without stretching */
