--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -1,4 +1,8 @@
 /* SECTION HERO */
+body {
+    overflow-x: hidden;
+}
+
 .section__hero {
     background-image: url('../images/pages/services-strategies/hero.png'); /* Path to your image */
     background-size: cover; /* Cover the entire section without stretching */
@@ -70,4 +74,8 @@
     max-width: 514px;
     width: 100%;
     height: auto;
+}
+
+body {
+    overflow-x: hidden;
 }
