--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -57,7 +57,7 @@
     }
 
     .history__text  .heading__container {
-        margin-left: 2.4rem;
+        /* margin-left: 2.4rem; */
         margin-right: 2.4rem;
     }
 }
