--- a/assets/css/property.css
+++ b/assets/css/property.css
@@ -67,7 +67,8 @@ body {
 /* Project Cards */
 
 .project__cards, #current-projects, #completed-projects {
-    display: flex;
+    /* display: flex; */
+    display: hidden;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
