--- a/assets/css/property.css
+++ b/assets/css/property.css
@@ -135,7 +135,7 @@ body {
 
 /* MORE Button*/
 #button__more {
-    width: 20%;
+    /* width: 70%; */
     margin: 0 auto ;
     margin-top: 3.6rem;
 }
